--- a/style.css
+++ b/style.css
@@ -86,7 +86,18 @@ h1 {
     margin: 0 18em;
     list-style: none;
   }
-
-  .clients {
-
-  }
+.clients li {
+  font-size: 2em;
+  color: #ccc;
+}
+.bookSection {
+  margin: 10em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.library {
+  height: 10em;
+  width: 10em;
+  background: whitesmoke;
+}
